Tue Feb 26 18:01:26 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m: Removed all _releasedBundles machinery.
	Removed custom implementation of -release.  Retain a bundle after
	we load it.  This fixes -bundleForClass: and simplifies
	considerably the code.

	* Source/NSBundle.m: Whenever possible, use [self method] rather
	than [NSBundle method] to invoke a class method, for efficiency.

	* Source/NSBundle.m (objc_executable_location): Compute directly
	from _executable_path - using mainBundle is unsafe.
	
Tue Feb 26 17:35:03 2002  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m (_bundle_load_callback): Completely ignore
	categories.  (Suggestion by Gerrit Van Dyk
	<GerritVD@decillion.net>).

2002-02-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTemplateValue.m: Implement initialize method to set the
	version of concrete classes to be that of the abstract class which
	actually performs encoding/decoding ... should correct archiving.
	Problem reported by Gerrit Van Dyk
	* Tools/GSIndex.m: tidied a little
	* Tools/GSParser.m: mark when things are implemented.
	* Tools/GSOutput.m: warn about unimplemented items.

2002-02-26  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSUnarchiver.m 
	([NSUnarchiver +classNameDecodedForArchiveClassName:]): 
	([NSUnarchiver -classNameDecodedForArchiveClassName:]): 
	return nil if the class name is not present.

2002-02-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: Fixes to work on mingw.
	* Source/NSHost.m: Update for current winsock on mingw.
	* Source/NSPortNameServer.m: Update for current winsock on mingw.
	* Source/WindowsFileHandle.m: Fix to work for basic socket I/O.
	* Tools/gdomap.c: many changes ... several fixes to work on mingw
	rewrite some clumsy inefficient code, make variables and functions
	local. etc.
	* Source/NSUnarchiver.m: ([versionForClassName:]) return NSNotFound
	if the class name was not present.
